* Tue Dec 16 2008 <valery_reznic@users.sourceforge.net> 2.2.4-1
- fix a problem: installation test failed when repackaged rpm file (with -p)
flag

* Wed Aug 06 2008 <gerbier@users.sourceforge.net> 2.2.3-1
- fix a problem with new rpm security on mandriva (defaultbuildroot)

* Mon Apr 28 2008 <gerbier@users.sourceforge.net> 2.2.2-1
- fix a bug when working on package file with path

* Wed Apr 2 2008 <gerbier@users.sourceforge.net> 2.2.1-1
- fix bug on uid/gid with --pug-from-fs option
- demo plugin : better error message
- do not remove /etc/popt : it does not belong our package
- add new set_tag plugin
- new demofiles plugin
- add utf-8 for french localisation

* Mon Oct 22 2007 <gerbier@users.sourceforge.net> 2.2.0-1
- add translation system (english and french) with new locale and man directory
- fix a bug with rpm localisation in PackageInstalled function ( rpm message are localized, so the grep filter does not work everywhere )
- fix bug : include file are also search in plugin directory
- fix help : do not show path any more (fedora bug 328641)
- add tests for --package option (if file exists, if it is an rpm)
- move package to Development/Tools group
- remove all calls to grep
- replace code in remove_from_popt.make.include by sed call (cf fedora specfile)
- update specfile description tag

* Mon Jun 18 2007 <gerbier@users.sourceforge.net> 2.1.1-1
- remove commented tags (PAYLOAD*, INSTALLTID, OPTFLAGS, PLATFORM, SIGSIZE) to solve bug for rpm 3.x
- add more info to bugreport (issues, warnings)
- add choice of email addresse for bug report
- send bug report to new rpmrebuild-bugreport list

* Tue May 15 2007 <gerbier@users.sourceforge.net> 2.1.0-1
- remove old deprecated tags ICON and SERIAL
- comment missing localisation file (lang)
- remove commnented tag XPM and GIF
- allow concurrent use : random working directory
- add new long option --debug
- check if rpm tags exists (CheckTags)
- add code to send bug report by mail (SendBugReport)
